Version 1.0.11

- Add Ability To Backup Single Notebook Or Single Folder

Version 1.0.10

- Bugfixes
- UI Package Updates
- Notification Improvements

Version 1.0.9

- Bugfixes

Version 1.0.6

- Performance improvements
- Design fixes
- Bugfixes
- Settings added
- Reupload screen images