@@ -15,6 +15,7 @@
 
     <GeometryDrawing x:Key="BoxIcons.RegularTransfer" Brush="#FF000000" Geometry="M10.4,6.4 L14.4,3.2 L10.4,-2.930E-007 L10.4,2.399 L-3.433E-009,2.399 L-3.433E-009,3.999 L10.4,3.999 z M16,8.8 L5.6,8.8 L5.6,6.4 L1.6,9.6 L5.6,12.8 L5.6,10.4 L16,10.4 z" />
     <GeometryDrawing x:Key="Material.Refresh" Brush="#FF000000" Geometry="M13.65,2.35 C12.2,0.9 10.21,0 8,0 A8,8 0 0 0 0,8 A8,8 0 0 0 8,16 C11.73,16 14.84,13.45 15.73,10 L13.65,10 C12.83,12.33 10.61,14 8,14 A6,6 0 0 1 2,8 A6,6 0 0 1 8,2 C9.66,2 11.14,2.69 12.22,3.78 L9,7 L16,7 L16,0 L13.65,2.35 z" />
+    <GeometryDrawing x:Key="BoxIcons.RegularReset" Brush="#FF000000" Geometry="M7.2,11.2 C8.537,11.2 9.6,10.14 9.6,8.8 C9.6,7.465 8.537,6.4 7.2,6.4 C5.863,6.4 4.8,7.465 4.8,8.8 C4.8,10.14 5.863,11.2 7.2,11.2 z M14.25,7.349 C14.05,6.372 13.67,5.508 13.15,4.749 L13.17,4.774 C12.64,4.002 12,3.356 11.25,2.846 L11.23,2.83 C10.49,2.327 9.627,1.95 8.697,1.754 L8.65,1.746 C8.219,1.654 7.723,1.602 7.215,1.602 C7.203,1.602 7.19,1.602 7.178,1.602 L7.18,1.602 L7.18,-1.465E-007 L4,2.4 L7.18,4.8 L7.18,3.202 C7.567,3.2 7.954,3.237 8.328,3.314 C9.087,3.472 9.759,3.765 10.35,4.168 L10.33,4.156 C10.93,4.565 11.43,5.068 11.83,5.65 L11.84,5.67 C12.44,6.545 12.8,7.627 12.8,8.792 C12.8,8.795 12.8,8.798 12.8,8.8 L12.8,8.8 C12.8,9.587 12.64,10.34 12.35,11.02 L12.36,10.98 C12.2,11.35 12.03,11.66 11.83,11.95 L11.84,11.93 C11.63,12.24 11.41,12.51 11.16,12.76 L11.16,12.76 C10.41,13.51 9.444,14.05 8.366,14.28 L8.33,14.29 C7.99,14.36 7.6,14.4 7.201,14.4 C6.801,14.4 6.411,14.36 6.035,14.28 L6.072,14.29 C5.312,14.13 4.641,13.84 4.05,13.43 L4.07,13.44 C3.469,13.04 2.966,12.53 2.57,11.95 L2.558,11.93 C1.958,11.05 1.6,9.969 1.6,8.801 C1.6,8.801 1.6,8.8 1.6,8.8 L1.6,8.8 L-1.328E-007,8.8 C0.0009186,10.3 0.4609,11.7 1.247,12.85 L1.231,12.83 C1.758,13.6 2.403,14.24 3.149,14.75 L3.174,14.77 C4.299,15.54 5.689,16 7.187,16 C7.191,16 7.196,16 7.201,16 L7.2,16 C7.714,16 8.215,15.95 8.699,15.85 L8.651,15.85 C9.628,15.65 10.49,15.27 11.25,14.75 L11.23,14.77 C11.62,14.5 11.97,14.21 12.29,13.89 L12.29,13.89 C12.61,13.57 12.9,13.22 13.15,12.85 L13.17,12.82 C13.94,11.7 14.4,10.31 14.4,8.812 C14.4,8.808 14.4,8.804 14.4,8.799 L14.4,8.8 C14.4,8.286 14.35,7.785 14.25,7.301 L14.25,7.349 z" />
 
     <GeometryDrawing x:Key="Material.HexagonMultiple" Brush="#FF000000" Geometry="M5.8,0 C5.952,0 6.088,0.088 6.152,0.208 L7.928,3.376 L8,3.6 L7.928,3.824 L6.152,6.992 C6.088,7.112 5.952,7.2 5.8,7.2 L2.2,7.2 C2.048,7.2 1.912,7.112 1.848,6.992 L0.072,3.824 L0,3.6 L0.072,3.376 L1.848,0.208 C1.912,0.088 2.048,0 2.2,0 L5.8,0  M5.8,8.8 C5.952,8.8 6.088,8.888 6.152,9.008 L7.928,12.18 L8,12.4 L7.928,12.62 L6.152,15.79 C6.088,15.91 5.952,16 5.8,16 L2.2,16 C2.048,16 1.912,15.91 1.848,15.79 L0.072,12.62 L0,12.4 L0.072,12.18 L1.848,9.008 C1.912,8.888 2.048,8.8 2.2,8.8 L5.8,8.8  M13.2,4.4 C13.35,4.4 13.49,4.488 13.55,4.608 L15.33,7.776 L15.4,8 L15.33,8.224 L13.55,11.39 C13.49,11.51 13.35,11.6 13.2,11.6 L9.6,11.6 C9.448,11.6 9.312,11.51 9.248,11.39 L7.472,8.224 L7.4,8 L7.472,7.776 L9.248,4.608 C9.312,4.488 9.448,4.4 9.6,4.4 L13.2,4.4 z" />
     <GeometryDrawing x:Key="Vaadin.CogOutline" Brush="#FF000000" Geometry="M15.2,6 L14.1,5.8 C14,5.6 14,5.4 13.9,5.2 L14.5,4.3 L15,3.6 L12.4,1 L11.7,1.5 L10.8,2.1 C10.6,2 10.4,2 10.2,1.9 L10,0.8 L9.8,1.776E-015 L6.2,1.776E-015 L6,0.8 L5.8,1.9 C5.6,2 5.4,2 5.2,2.1 L4.3,1.5 L3.6,1.1 L1.1,3.6 L1.6,4.3 L2.2,5.2 C2,5.4 2,5.6 1.9,5.8 L0.8,6 L0,6.2 L0,9.8 L0.8,10 L1.9,10.2 C2,10.4 2,10.6 2.1,10.8 L1.5,11.7 L1,12.4 L3.6,15 L4.3,14.5 L5.2,13.9 C5.4,14 5.6,14 5.8,14.1 L6,15.2 L6.2,16 L9.8,16 L10,15.2 L10.2,14.1 C10.4,14 10.6,14 10.8,13.9 L11.7,14.5 L12.4,15 L15,12.4 L14.5,11.7 L13.9,10.8 C14,10.6 14.1,10.4 14.1,10.2 L15.2,10 L16,9.8 L16,6.2 L15.2,6 z M15,9 L13.3,9.3 C13.2,9.8 13,10.3 12.7,10.8 L13.6,12.2 L12.2,13.6 L10.8,12.7 C10.3,13 9.8,13.2 9.3,13.3 L9,15 L7,15 L6.7,13.3 C6.2,13.2 5.7,13 5.2,12.7 L3.8,13.6 L2.4,12.2 L3.3,10.8 C3,10.3 2.8,9.8 2.7,9.3 L1,9 L1,7 L2.7,6.7 C2.8,6.2 3,5.7 3.3,5.2 L2.3,3.8 L3.7,2.4 L5.1,3.3 C5.6,3 6.1,2.8 6.6,2.7 L7,1 L9,1 L9.3,2.7 C9.8,2.8 10.3,3 10.8,3.3 L12.2,2.4 L13.6,3.8 L12.7,5.2 C13,5.7 13.2,6.2 13.3,6.7 L15,7 L15,9 z M8,4.5 C6.1,4.5 4.5,6.1 4.5,8 C4.5,9.9 6.1,11.5 8,11.5 C9.9,11.5 11.5,9.9 11.5,8 C11.5,6.1 9.9,4.5 8,4.5 z M8,10.5 C6.6,10.5 5.5,9.4 5.5,8 C5.5,6.6 6.6,5.5 8,5.5 C9.4,5.5 10.5,6.6 10.5,8 C10.5,9.4 9.4,10.5 8,10.5 z" />
