@@ -121,5 +121,8 @@
   "Start Compressing": "Start Compressing",
   "Compressing '{0}'": "Compressing '{0}'",
   "Backup all your files": "Backup all your files",
-  "Share Email Addresses": "Share Email Addresses"
+
+  "Share Email Addresses": "Share Email Addresses",
+  "Reset To Default": "Reset To Default",
+  "Uploading Screen '{0}'": "Uploading Screen '{0}'"
 }
